--- a/base2_reanalise.html
+++ b/base2_reanalise.html
@@ -420,15 +420,15 @@ div.tocify {
 <hr />
 <p>Com isto foram geradas duas bases:</p>
 <ul>
-<li><p>A primeira, para análise manual por um especialista no assunto. Contemplava valores de latência acima de 21 para mínima ou de 40 para máxima. Esta contém 7 casos.</p></li>
-<li><p>A segunda, para análise estatística. Contemplava valores de latência mínima abaixo de 20 e máxima abaixo de 40. Esta contém 1070 casos.</p></li>
+<li><p>A primeira, para análise manual por um especialista no assunto. Contemplava valores de latência acima de 21 para mínima ou de 40 para máxima. Esta contém 13 casos.</p></li>
+<li><p>A segunda, para análise estatística. Contemplava valores de latência mínima abaixo de 20 e máxima abaixo de 40. Esta contém 1562 casos.</p></li>
 </ul>
 <hr />
 <p>Base para análise manual:</p>
-<div id="htmlwidget-fae5572a4ce88317782f" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-fae5572a4ce88317782f">{"x":{"filter":"none","data":[[263,264,266,267,268,269,1035],["VMOVNTDQ","VMOVNTDQ","VMOVNTPD","VMOVNTPD","VMOVNTPS","VMOVNTPS","MOVNTPS"],[0,0,0,0,0,0,0],[0,0,0,0,0,0,0],["0","0","0","0","0","0","0"],["1","1","1","1","1","1","1"],["1","1","1","1","1","1","1"],[0,0,0,0,0,0,0],[0,0,0,0,0,0,0],["0","0","0","0","0","0","0"],["0","0","0","0","0","0","0"],["0","0","0","0","0","0","0"],[0,0,0,0,0,0,0],["0","0","0","0","0","0","0"],[0,0,0,0,0,0,0],[329,329,329,329,329,329,338],[330,330,330,330,330,330,340]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>n<\/th>\n      <th>inst<\/th>\n      <th>p0156<\/th>\n      <th>p06<\/th>\n      <th>p23<\/th>\n      <th>p237<\/th>\n      <th>p4<\/th>\n      <th>p1<\/th>\n      <th>p15<\/th>\n      <th>p015<\/th>\n      <th>p5<\/th>\n      <th>p0<\/th>\n      <th>p05<\/th>\n      <th>p01<\/th>\n      <th>p6<\/th>\n      <th>min_lat<\/th>\n      <th>max_lat<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"pageLength":12,"columnDefs":[{"className":"dt-right","targets":[0,2,3,7,8,12,14,15,16]}],"order":[],"autoWidth":false,"orderClasses":false,"lengthMenu":[10,12,25,50,100]}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-718ab496590167a5fd37" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-718ab496590167a5fd37">{"x":{"filter":"none","data":[[121,122,187,188,189,190,191,856,857,858,859,860,861],["FXSAVE64","FXSAVE","MOVNTDQ","MOVNTI","MOVNTI","MOVNTPD","MOVNTPS","VMOVNTDQ","VMOVNTDQ","VMOVNTPD","VMOVNTPD","VMOVNTPS","VMOVNTPS"],[0,0,0,0,0,0,0,0,0,0,0,0,0],[18,19,0,0,0,0,0,0,0,0,0,0,0],["1","1","0","1","1","0","0","0","0","0","0","0","0"],["1","0","1","0","0","1","1","1","1","1","1","1","1"],["1","1","1","1","1","1","1","1","1","1","1","1","1"],[12,12,0,0,0,0,0,0,0,0,0,0,0],[1,2,0,0,0,0,0,0,0,0,0,0,0],["0","0","0","0","0","0","0","0","0","0","0","0","0"],["1","1","0","0","0","0","0","0","0","0","0","0","0"],["1","1","0","0","0","0","0","0","0","0","0","0","0"],[2,3,0,0,0,0,0,0,0,0,0,0,0],["1","1","0","0","0","0","0","0","0","0","0","0","0"],[0,0,0,0,0,0,0,0,0,0,0,0,0],[46,45,344,344,344,339,338,329,329,329,329,329,329],[46,45,345,346,345,340,340,330,330,330,330,330,330],[0,0,0,0,0,0,0,0,17572468,0,0,0,0]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>n<\/th>\n      <th>inst<\/th>\n      <th>p0156<\/th>\n      <th>p06<\/th>\n      <th>p23<\/th>\n      <th>p237<\/th>\n      <th>p4<\/th>\n      <th>p1<\/th>\n      <th>p15<\/th>\n      <th>p015<\/th>\n      <th>p5<\/th>\n      <th>p0<\/th>\n      <th>p05<\/th>\n      <th>p01<\/th>\n      <th>p6<\/th>\n      <th>min_lat<\/th>\n      <th>max_lat<\/th>\n      <th>count<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"pageLength":13,"columnDefs":[{"className":"dt-right","targets":[0,2,3,7,8,12,14,15,16,17]}],"order":[],"autoWidth":false,"orderClasses":false,"lengthMenu":[10,13,25,50,100]}},"evals":[],"jsHooks":[]}</script>
 <hr />
-<p>As seções seguintes referem-se à análise exploratória da base maior, que continha 1070 observações.</p>
+<p>As seções seguintes referem-se à análise exploratória da base maior, que continha 1562 observações.</p>
 <hr />
 </div>
 <div id="analise-univariada" class="section level1">
@@ -458,13 +458,13 @@ div.tocify {
 <tbody>
 <tr class="odd">
 <td align="center">0</td>
-<td align="center">565</td>
-<td align="center">0.528</td>
+<td align="center">822</td>
+<td align="center">0.526</td>
 </tr>
 <tr class="even">
 <td align="center">1</td>
-<td align="center">505</td>
-<td align="center">0.472</td>
+<td align="center">740</td>
+<td align="center">0.474</td>
 </tr>
 </tbody>
 </table>
@@ -490,13 +490,13 @@ div.tocify {
 <tbody>
 <tr class="odd">
 <td align="center">0</td>
-<td align="center">1027</td>
-<td align="center">0.96</td>
+<td align="center">1504</td>
+<td align="center">0.963</td>
 </tr>
 <tr class="even">
 <td align="center">1</td>
-<td align="center">43</td>
-<td align="center">0.04</td>
+<td align="center">58</td>
+<td align="center">0.037</td>
 </tr>
 </tbody>
 </table>
@@ -522,13 +522,13 @@ div.tocify {
 <tbody>
 <tr class="odd">
 <td align="center">0</td>
-<td align="center">928</td>
-<td align="center">0.867</td>
+<td align="center">1350</td>
+<td align="center">0.864</td>
 </tr>
 <tr class="even">
 <td align="center">1</td>
-<td align="center">142</td>
-<td align="center">0.133</td>
+<td align="center">212</td>
+<td align="center">0.136</td>
 </tr>
 </tbody>
 </table>
@@ -554,13 +554,13 @@ div.tocify {
 <tbody>
 <tr class="odd">
 <td align="center">0</td>
-<td align="center">703</td>
-<td align="center">0.657</td>
+<td align="center">998</td>
+<td align="center">0.639</td>
 </tr>
 <tr class="even">
 <td align="center">1</td>
-<td align="center">367</td>
-<td align="center">0.343</td>
+<td align="center">564</td>
+<td align="center">0.361</td>
 </tr>
 </tbody>
 </table>
@@ -586,13 +586,13 @@ div.tocify {
 <tbody>
 <tr class="odd">
 <td align="center">0</td>
-<td align="center">926</td>
-<td align="center">0.865</td>
+<td align="center">1331</td>
+<td align="center">0.852</td>
 </tr>
 <tr class="even">
 <td align="center">1</td>
-<td align="center">144</td>
-<td align="center">0.135</td>
+<td align="center">231</td>
+<td align="center">0.148</td>
 </tr>
 </tbody>
 </table>
@@ -618,13 +618,13 @@ div.tocify {
 <tbody>
 <tr class="odd">
 <td align="center">0</td>
-<td align="center">606</td>
-<td align="center">0.566</td>
+<td align="center">896</td>
+<td align="center">0.574</td>
 </tr>
 <tr class="even">
 <td align="center">1</td>
-<td align="center">464</td>
-<td align="center">0.434</td>
+<td align="center">666</td>
+<td align="center">0.426</td>
 </tr>
 </tbody>
 </table>
@@ -650,37 +650,37 @@ div.tocify {
 <tbody>
 <tr class="odd">
 <td align="center">[0,2]</td>
-<td align="center">511</td>
-<td align="center">0.478</td>
+<td align="center">756</td>
+<td align="center">0.484</td>
 </tr>
 <tr class="even">
 <td align="center">(2,4]</td>
-<td align="center">285</td>
-<td align="center">0.266</td>
+<td align="center">400</td>
+<td align="center">0.256</td>
 </tr>
 <tr class="odd">
 <td align="center">(4,6]</td>
-<td align="center">115</td>
-<td align="center">0.107</td>
+<td align="center">179</td>
+<td align="center">0.115</td>
 </tr>
 <tr class="even">
 <td align="center">(6,8]</td>
-<td align="center">43</td>
-<td align="center">0.04</td>
+<td align="center">70</td>
+<td align="center">0.045</td>
 </tr>
 <tr class="odd">
 <td align="center">(8,10]</td>
-<td align="center">41</td>
-<td align="center">0.038</td>
+<td align="center">54</td>
+<td align="center">0.035</td>
 </tr>
 <tr class="even">
 <td align="center">(10,12]</td>
-<td align="center">53</td>
-<td align="center">0.05</td>
+<td align="center">71</td>
+<td align="center">0.045</td>
 </tr>
 <tr class="odd">
 <td align="center">(12,14]</td>
-<td align="center">16</td>
+<td align="center">24</td>
 <td align="center">0.015</td>
 </tr>
 <tr class="even">
@@ -695,8 +695,8 @@ div.tocify {
 </tr>
 <tr class="even">
 <td align="center">(18,20]</td>
-<td align="center">5</td>
-<td align="center">0.005</td>
+<td align="center">7</td>
+<td align="center">0.004</td>
 </tr>
 <tr class="odd">
 <td align="center">(20,22]</td>
@@ -727,58 +727,58 @@ div.tocify {
 <tbody>
 <tr class="odd">
 <td align="center">[0,2]</td>
-<td align="center">287</td>
+<td align="center">419</td>
 <td align="center">0.268</td>
 </tr>
 <tr class="even">
 <td align="center">(2,4]</td>
-<td align="center">145</td>
-<td align="center">0.136</td>
-</tr>
-<tr class="odd">
-<td align="center">(4,6]</td>
-<td align="center">41</td>
-<td align="center">0.038</td>
-</tr>
-<tr class="even">
-<td align="center">(6,8]</td>
-<td align="center">215</td>
-<td align="center">0.201</td>
-</tr>
-<tr class="odd">
-<td align="center">(8,10]</td>
-<td align="center">156</td>
-<td align="center">0.146</td>
-</tr>
-<tr class="even">
-<td align="center">(10,12]</td>
-<td align="center">142</td>
+<td align="center">208</td>
 <td align="center">0.133</td>
 </tr>
 <tr class="odd">
+<td align="center">(4,6]</td>
+<td align="center">64</td>
+<td align="center">0.041</td>
+</tr>
+<tr class="even">
+<td align="center">(6,8]</td>
+<td align="center">353</td>
+<td align="center">0.226</td>
+</tr>
+<tr class="odd">
+<td align="center">(8,10]</td>
+<td align="center">189</td>
+<td align="center">0.121</td>
+</tr>
+<tr class="even">
+<td align="center">(10,12]</td>
+<td align="center">188</td>
+<td align="center">0.12</td>
+</tr>
+<tr class="odd">
 <td align="center">(12,14]</td>
-<td align="center">35</td>
-<td align="center">0.033</td>
+<td align="center">45</td>
+<td align="center">0.029</td>
 </tr>
 <tr class="even">
 <td align="center">(14,16]</td>
-<td align="center">21</td>
-<td align="center">0.02</td>
+<td align="center">30</td>
+<td align="center">0.019</td>
 </tr>
 <tr class="odd">
 <td align="center">(16,18]</td>
-<td align="center">6</td>
-<td align="center">0.006</td>
+<td align="center">20</td>
+<td align="center">0.013</td>
 </tr>
 <tr class="even">
 <td align="center">(18,20]</td>
-<td align="center">10</td>
-<td align="center">0.009</td>
+<td align="center">23</td>
+<td align="center">0.015</td>
 </tr>
 <tr class="odd">
 <td align="center">(20,22]</td>
-<td align="center">6</td>
-<td align="center">0.006</td>
+<td align="center">12</td>
+<td align="center">0.008</td>
 </tr>
 <tr class="even">
 <td align="center">(22,24]</td>
@@ -787,8 +787,8 @@ div.tocify {
 </tr>
 <tr class="odd">
 <td align="center">(24,26]</td>
-<td align="center">5</td>
-<td align="center">0.005</td>
+<td align="center">10</td>
+<td align="center">0.006</td>
 </tr>
 <tr class="even">
 <td align="center">(26,28]</td>
@@ -840,7 +840,7 @@ div.tocify {
 <td align="center"><strong>min_lat</strong></td>
 <td align="center">0</td>
 <td align="center">1</td>
-<td align="center">3.478</td>
+<td align="center">3.417</td>
 <td align="center">3</td>
 <td align="center">1</td>
 <td align="center">5</td>
@@ -850,10 +850,10 @@ div.tocify {
 <td align="center"><strong>max_lat</strong></td>
 <td align="center">1</td>
 <td align="center">1</td>
-<td align="center">6.684</td>
+<td align="center">6.771</td>
 <td align="center">8</td>
 <td align="center">1</td>
-<td align="center">9</td>
+<td align="center">10</td>
 <td align="center">29</td>
 </tr>
 </tbody>
@@ -883,14 +883,14 @@ div.tocify {
 <tr class="odd">
 <td align="center"><strong>min_lat</strong></td>
 <td align="center">21</td>
-<td align="center">11.51</td>
-<td align="center">3.393</td>
+<td align="center">11.27</td>
+<td align="center">3.357</td>
 </tr>
 <tr class="even">
 <td align="center"><strong>max_lat</strong></td>
 <td align="center">28</td>
-<td align="center">22.61</td>
-<td align="center">4.755</td>
+<td align="center">24.67</td>
+<td align="center">4.967</td>
 </tr>
 </tbody>
 </table>
@@ -940,17 +940,17 @@ div.tocify {
 <td align="center">0</td>
 <td align="center">2.864</td>
 <td align="center">2.845</td>
-<td align="center">3.508</td>
-<td align="center">3.506</td>
-<td align="center">565</td>
+<td align="center">3.521</td>
+<td align="center">3.592</td>
+<td align="center">822</td>
 </tr>
 <tr class="even">
 <td align="center">1</td>
-<td align="center">4.164</td>
-<td align="center">3.804</td>
-<td align="center">10.24</td>
-<td align="center">3.201</td>
-<td align="center">505</td>
+<td align="center">4.032</td>
+<td align="center">3.754</td>
+<td align="center">10.38</td>
+<td align="center">3.6</td>
+<td align="center">740</td>
 </tr>
 </tbody>
 </table>
@@ -982,19 +982,19 @@ div.tocify {
 <tbody>
 <tr class="odd">
 <td align="center">0</td>
-<td align="center">3.368</td>
-<td align="center">3.363</td>
-<td align="center">6.506</td>
-<td align="center">4.759</td>
-<td align="center">1027</td>
+<td align="center">3.32</td>
+<td align="center">3.333</td>
+<td align="center">6.614</td>
+<td align="center">4.984</td>
+<td align="center">1504</td>
 </tr>
 <tr class="even">
 <td align="center">1</td>
-<td align="center">6.093</td>
-<td align="center">3.092</td>
-<td align="center">10.93</td>
-<td align="center">1.737</td>
-<td align="center">43</td>
+<td align="center">5.948</td>
+<td align="center">2.982</td>
+<td align="center">10.86</td>
+<td align="center">1.732</td>
+<td align="center">58</td>
 </tr>
 </tbody>
 </table>
@@ -1004,14 +1004,14 @@ div.tocify {
 <div id="p015-1" class="section level3">
 <h3><span class="header-section-number">3.1.3</span> p015</h3>
 <center>
-<table style="width:90%;">
+<table style="width:92%;">
 <colgroup>
 <col width="12%" />
 <col width="13%" />
 <col width="20%" />
 <col width="13%" />
 <col width="20%" />
-<col width="8%" />
+<col width="9%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -1026,19 +1026,19 @@ div.tocify {
 <tbody>
 <tr class="odd">
 <td align="center">0</td>
-<td align="center">3.831</td>
-<td align="center">3.497</td>
-<td align="center">6.902</td>
-<td align="center">4.856</td>
-<td align="center">928</td>
+<td align="center">3.78</td>
+<td align="center">3.456</td>
+<td align="center">6.863</td>
+<td align="center">4.92</td>
+<td align="center">1350</td>
 </tr>
 <tr class="even">
 <td align="center">1</td>
-<td align="center">1.169</td>
-<td align="center">0.842</td>
-<td align="center">5.261</td>
-<td align="center">3.751</td>
-<td align="center">142</td>
+<td align="center">1.108</td>
+<td align="center">0.894</td>
+<td align="center">6.189</td>
+<td align="center">5.228</td>
+<td align="center">212</td>
 </tr>
 </tbody>
 </table>
@@ -1070,19 +1070,19 @@ div.tocify {
 <tbody>
 <tr class="odd">
 <td align="center">0</td>
-<td align="center">3.535</td>
-<td align="center">3.593</td>
-<td align="center">7.004</td>
-<td align="center">4.829</td>
-<td align="center">703</td>
+<td align="center">3.466</td>
+<td align="center">3.536</td>
+<td align="center">6.874</td>
+<td align="center">4.849</td>
+<td align="center">998</td>
 </tr>
 <tr class="even">
 <td align="center">1</td>
-<td align="center">3.368</td>
-<td align="center">2.976</td>
-<td align="center">6.071</td>
-<td align="center">4.555</td>
-<td align="center">367</td>
+<td align="center">3.332</td>
+<td align="center">3.017</td>
+<td align="center">6.59</td>
+<td align="center">5.168</td>
+<td align="center">564</td>
 </tr>
 </tbody>
 </table>
@@ -1092,14 +1092,14 @@ div.tocify {
 <div id="p0-1" class="section level3">
 <h3><span class="header-section-number">3.1.5</span> p0</h3>
 <center>
-<table style="width:90%;">
+<table style="width:92%;">
 <colgroup>
 <col width="12%" />
 <col width="13%" />
 <col width="20%" />
 <col width="13%" />
 <col width="20%" />
-<col width="8%" />
+<col width="9%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -1114,19 +1114,19 @@ div.tocify {
 <tbody>
 <tr class="odd">
 <td align="center">0</td>
-<td align="center">2.712</td>
-<td align="center">2.497</td>
-<td align="center">6.009</td>
-<td align="center">4.148</td>
-<td align="center">926</td>
+<td align="center">2.755</td>
+<td align="center">2.546</td>
+<td align="center">5.972</td>
+<td align="center">4.139</td>
+<td align="center">1331</td>
 </tr>
 <tr class="even">
 <td align="center">1</td>
-<td align="center">8.403</td>
-<td align="center">4.185</td>
-<td align="center">11.03</td>
-<td align="center">5.981</td>
-<td align="center">144</td>
+<td align="center">7.234</td>
+<td align="center">4.672</td>
+<td align="center">11.38</td>
+<td align="center">6.584</td>
+<td align="center">231</td>
 </tr>
 </tbody>
 </table>
@@ -1158,19 +1158,19 @@ div.tocify {
 <tbody>
 <tr class="odd">
 <td align="center">0</td>
-<td align="center">3.356</td>
-<td align="center">3.634</td>
-<td align="center">6.482</td>
-<td align="center">5.004</td>
-<td align="center">606</td>
+<td align="center">3.204</td>
+<td align="center">3.497</td>
+<td align="center">6.655</td>
+<td align="center">5.312</td>
+<td align="center">896</td>
 </tr>
 <tr class="even">
 <td align="center">1</td>
-<td align="center">3.636</td>
-<td align="center">3.047</td>
-<td align="center">6.948</td>
-<td align="center">4.4</td>
-<td align="center">464</td>
+<td align="center">3.704</td>
+<td align="center">3.139</td>
+<td align="center">6.928</td>
+<td align="center">4.459</td>
+<td align="center">666</td>
 </tr>
 </tbody>
 </table>
